update config settings

--- a/.ftpconfig
+++ b/.ftpconfig
@@ -5,7 +5,7 @@
     "user": "ryangauthier",
     "pass": "matilda96",
     "promptForPass": false,
-    "remote": "/",
+    "remote": "/2018nwcc.com",
     "local": "",
     "secure": false,
     "secureOptions": null,
